salesforce/metadata/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>POST_MESSAGE__c</fullName>
        <label>POST Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POST_STATUS__c</fullName>
        <label>POST Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAGE_Article_No__c</fullName>
        <label>SAGE Article No</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAGE_Quote_Item_ID__c</fullName>
        <label>SAGE Quote Item ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>